executable(
    'list_dir',
    'list_dir.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'list_dir_ll',
    'list_dir_ll.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'read_file',
    'read_file.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'read_file_ll',
    'read_file_ll.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'readme_example',
    'readme_example.c',
    install: false,
    dependencies: libsqsh_dep,
)
