executable(
    'list_dir',
    'list_dir.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'list_dir_ll',
    'list_dir_ll.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'traverse_dir',
    'traverse_dir.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'traverse_dir_ll',
    'traverse_dir_ll.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'read_file',
    'read_file.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'read_file_ll',
    'read_file_ll.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'list_xattrs',
    'list_xattrs.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'list_xattrs_ll',
    'list_xattrs_ll.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'custom_mapper',
    'custom_mapper.c',
    install: false,
    dependencies: libsqsh_dep,
)
executable(
    'readme_example',
    'readme_example.c',
    install: false,
    dependencies: libsqsh_dep,
)
