headers = [
	'sqsh_archive.h',
	'sqsh_common.h',
	'sqsh_compression_private.h',
	'sqsh_context.h',
	'sqsh_context_private.h',
	'sqsh_data.h',
	'sqsh_data_private.h',
	'sqsh_directory.h',
	'sqsh_directory_private.h',
	'sqsh_error.h',
	'sqsh_file.h',
	'sqsh_file_private.h',
	'sqsh_mapper.h',
	'sqsh_mapper_private.h',
	'sqsh_metablock_private.h',
	'sqsh_primitive_private.h',
	'sqsh_table.h',
	'sqsh_table_private.h',
	'sqsh_xattr.h',
	'sqsh_xattr_private.h',
]

libsqsh_include = include_directories('.')

install_headers(
	headers,
	subdir: 'sqsh'
)
