libsqsh_common_sources = files(
    'data/compression_options_data.c',
    'data/directory_data.c',
    'data/fragment_data.c',
    'data/inode_data.c',
    'data/metablock_data.c',
    'data/superblock_data.c',
    'data/superblock_set.c',
    'data/xattr_data.c',
    'reader/reader.c',
    'utils/math.c',
    'utils/thread.c',
)
