libsqsh_private_headers = files(
    'sqsh_archive_private.h',
    'sqsh_directory_private.h',
    'sqsh_extract_private.h',
    'sqsh_mapper_private.h',
    'sqsh_metablock_private.h',
    'sqsh_reader_private.h',
    'sqsh_table_private.h',
    'sqsh_thread_private.h',
    'sqsh_tree_private.h',
    'sqsh_xattr_private.h',
)

libsqsh_private_include = include_directories('.')
